--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "antd-mobile-icons": "^0.3.0",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
+    "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.10",
+    "echarts": "^5.5.0",
+    "echarts-for-react": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "uuid": "^9.0.1",
-    "zustand": "^4.5.0"
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@types/node": "^20.11.20",
